<resources>
    <string name="app_name">Lycée Connecté</string>
    <string name="lorem_2p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla elementum massa eu arcu congue pellentesque placerat id turpis. Sed imperdiet mi vitae ex tristique mattis. Phasellus eu volutpat erat. Aliquam finibus nibh in dignissim luctus. Vivamus turpis lacus, blandit sagittis aliquam in, placerat sit amet nisl. Praesent a eleifend nibh, nec rhoncus odio. Donec porta lorem nibh, nec mattis purus eleifend vel. Mauris ac facilisis neque. Phasellus sed commodo turpis. Suspendisse lobortis velit vel odio blandit, sit amet eleifend nisl mattis. Pellentesque et nibh justo. Nunc lobortis ligula sed turpis sodales faucibus. Suspendisse potenti.</string>
    <string name="title">Title</string>
    <string name="placeholder_time_ago">time ago</string>
    <string name="show_more">Plus</string>
    <string name="hide">Cacher</string>
    <string name="type">Type</string>
    <string name="placeholder_name">Nom Prénom</string>
    <string name="placeholder_school_name">Établissement</string>
    <string name="placeholder_news">Actualités</string>
    <string name="placeholder_news_feed">Fil de Nouveautés</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Paramètres</string>
    <string name="connection">Connection</string>
    <string name="no_login_connect">Lancer sans se connecter</string>
    <string name="placeholder_type">Type</string>
    <string name="placeholder_login">Login</string>
    <string name="messaging">Messagerie</string>
    <string name="messages">Messages</string>
    <string name="sent">Envoyés</string>
    <string name="drafts">Brouillons</string>
    <string name="bin">Corbeille</string>
    <string name="placeholder_date">Date</string>
    <string name="empty_subject">(Aucun object)</string>
    <string name="placeholder_subject">Subject</string>
    <string name="archive">Archiver</string>
    <string name="delete">Delete</string>
    <string name="mark_as_read">Marquer comme lu</string>
    <string name="content">Content</string>
    <string name="placeholder_to">à …</string>
    <string name="mom_finder">Mom Finder</string>
    <string name="find">Find</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="no_data">No Data</string>
    <string name="search">Search</string>
    <string name="related_1">Related 1</string>
    <string name="related_2">Related 2</string>
    <string name="profile">Profile</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_email">E-Mail</string>
    <string name="placeholder_phone">Phone Number</string>
    <string name="placeholder_mobile">Mobile</string>
    <string name="placeholder_birth_date">Birth Date</string>
    <string name="placeholder_home_institution">Établissement de rattachement</string>
    <string name="main_info">Informations principales</string>
    <string name="placeholder_related_name">Related Name</string>
    <string name="send">Envoyer</string>
    <string name="related">Responsables</string>
    <string name="in_the_future">dans le futur</string>
    <string name="moments_ago">il n\'y a pas longtemps</string>
    <string name="a_minute_ago">il y a une minute</string>
    <string name="minutes"> minutes</string>
    <string name="an_hour_ago">il y a une heure</string>
    <string name="yesterday">hier</string>
    <string name="hours_ago"> heures</string>
    <string name="days_ago"> jours"</string>
    <string name="time_ago_prefix">"il y a "</string>
</resources>