<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/dashboardFragment"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24" />
    <item android:id="@+id/newsFragment"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications" />
    <item android:id="@+id/messagingFragment"
        android:title="@string/messaging"
        android:icon="@drawable/ic_baseline_mail_24" />
    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_person" />
    <item android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24" />
</menu>
