<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mail_item_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Elevated"
    android:clickable="true"
    android:layout_margin="8dp"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mail_item_icon_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppTheme.ShapeableImageView.Rounded.Border" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mail_item_title_tv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toEndOf="@+id/mail_item_icon_img"
            app:layout_constraintTop_toTopOf="@+id/mail_item_icon_img" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mail_item_date_tv"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@+id/mail_item_title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mail_item_title_tv"
            app:layout_constraintTop_toTopOf="@+id/mail_item_title_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mail_item_body_tv"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lorem_2p"
            app:layout_constraintBottom_toBottomOf="@+id/mail_item_icon_img"
            app:layout_constraintEnd_toEndOf="@+id/mail_item_date_tv"
            app:layout_constraintStart_toStartOf="@+id/mail_item_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/mail_item_title_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>